--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -3,7 +3,7 @@
   max-width: 500px
   width: 100%
   margin: auto
-  padding-top: 80px
+  padding-top: 60px
 
 .full-width
   width: 100%
@@ -29,3 +29,34 @@
   height: 45px
   max-width: 200px
   width: 100%
+
+.status-true
+  padding-top: 20px
+
+.status-false
+  padding-top: 30px
+
+.book-block
+  padding-top: 18px
+
+.veh-num
+  padding-right: 10px
+  display: inline-block
+
+.veh-type
+  padding-left: 10px
+  padding-right: 10px
+  display: inline-block
+
+.button-book
+  height: 45px
+  max-width: 150px
+  width: 100%
+
+.mat-icon-size
+  font-size: 20px
+  padding-top: 3px
+
+.mat-icon-false
+  color: #d63031
+  font-size: 30px
