--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -69,24 +69,25 @@
       <form class="veh-num">
         <mat-form-field appearance="outline">
           <mat-label>Vehicle Number</mat-label>
-          <input matInput>
+          <input matInput [(ngModel)]="parkingInfo.vehicleNumber" name="vehicleNumber">
           <mat-icon matSuffix>drive_eta</mat-icon>
         </mat-form-field>
       </form>
       <form class="veh-type">
         <mat-form-field appearance="outline">
           <mat-label>Phone Number</mat-label>
-          <input matInput>
+          <input matInput [(ngModel)]="parkingInfo.phoneNumber" name="phoneNumber">
           <mat-icon matSuffix>phone</mat-icon>
         </mat-form-field>
       </form>
       <form style="padding-top: 5px">
-        <button class="button-book" mat-raised-button color="warn" (click)="book()">
+        <button class="button-book" mat-raised-button color="warn" (click)="book()" *ngIf="!booking">
           <span style="margin: 0 10px 0 20px">
             Book
           </span>
           <mat-icon class="mat-icon-size" matSuffix>done</mat-icon>
         </button>
+        <h3 *ngIf="booking" style="color: #00b894">Booked</h3>
       </form>
     </div>
   </div>
